fix off screen picker

--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+#canvas-container{
+	position: absolute;
+	z-index: -10;
+}
+
+canvas { 
+	width: 100%;
+	height: 100%; 
+	display: block;
+}
+
 #panel{
 	position: absolute;
 	right: 0px;
@@ -26,4 +37,5 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+	margin-right:130px;
 }
